<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginScreen"
    >

    <data>

        <variable
            name="loginvm"
            type="com.apprikart.logindemo.LoginVM" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        >

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/sign_up_brn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/sign_up"
            android:layout_marginBottom="20dp"
            android:onClick="@{() -> loginvm.signUp()}"
            />

        <LinearLayout
            android:id="@+id/input_fields"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/sign_up_brn"
            android:layout_below="@id/header"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/first_name_header"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/first_name_hint"
                android:singleLine="true"
                android:text="@={loginvm.firstName}"
                android:textColor="#000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/last_name_header"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/last_name_hint"
                android:singleLine="true"
                android:text="@={loginvm.lastName}"
                android:textColor="#000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/email_header"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/email_hint"
                android:singleLine="true"
                android:text="@={loginvm.email}"
                android:textColor="#000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:singleLine="true"
                android:text="@string/password_header"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/password_hint"
                android:maxLength="15"
                android:singleLine="true"
                android:text="@={loginvm.password}"
                android:textColor="#000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:singleLine="true"
                android:text="@string/confirm_password_header"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:maxLength="15"
                android:text="@={loginvm.confirmPassword}"
                android:singleLine="true"
                android:textColor="#000000" />
        </LinearLayout>
    </RelativeLayout>
</layout>